--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ pip install --editable deeplift/
 <span class="c"># 1) Convert a Keras sequential model</span>
 <span class="n">deeplift_model</span> <span class="o">=</span> <span class="n">kc</span><span class="o">.</span><span class="n">convert_sequential_model</span><span class="p">(</span>
                     <span class="n">keras_model</span><span class="p">,</span>
-                    <span class="n">mxts_mode</span><span class="o">=</span><span class="n">deeplift</span><span class="o">.</span><span class="n">blobs</span><span class="o">.</span><span class="n">MxtsMode</span><span class="o">.</span><span class="n">DeepLIFT</span><span class="p">)</span>
+                    <span class="n">nonlinear_mxts_mode</span><span class="o">=</span><span class="n">deeplift</span><span class="o">.</span><span class="n">blobs</span><span class="o">.</span><span class="n">NonlinearMxtsMode</span><span class="o">.</span><span class="n">DeepLIFT</span><span class="p">)</span>
 
 <span class="c"># specify the index of the layer to compute the importance scores of</span>
 <span class="c"># typically the input layer (index of 0)</span>
@@ -156,10 +156,9 @@ pip install --editable deeplift/
                                          <span class="n">progress_update</span><span class="o">=</span><span class="mi">1000</span><span class="p">))</span>
 </code></pre>
 <p>1) <strong>Convert a Keras sequential model</strong>:<br>
-<code class="prettyprint">MxtsMode</code> defines the method for computing importance scores; supported methods include:</p>
+<code class="prettyprint">NonlinearMxtsMode</code> defines the method for computing importance scores; other supported methods include:</p>
 
 <ul>
-<li>DeepLIFT<br></li>
 <li>Gradient<br></li>
 <li>DeconvNet<br></li>
 <li>GuidedBackprop<br></li>
@@ -167,7 +166,7 @@ pip install --editable deeplift/
 </ul>
 
 <p>2) <strong>Compile the function that compoutes important scores</strong>:<br>
-In the case of <code class="prettyprint">MxtsMode.DeepLIFT</code>, the importance scores are also called &ldquo;contribution scores&rdquo;</p>
+In the case of <code class="prettyprint">NonlinearMxtsMode.DeepLIFT</code>, the importance scores are also called &ldquo;contribution scores&rdquo;</p>
 
 <ul>
 <li>For sigmoid or softmax outputs, <code class="prettyprint">target_layer_idx</code> should be -2 (the default, see <a href="https://arxiv.org/pdf/1605.01713v2.pdf">&ldquo;a note on final activation layers&rdquo;</a>)</li>
