--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
       <div class="content">
         <h1 id="introduction">Introduction</h1>
 
+<p>WARNING: THIS PAGE IS NOT UP TO DATE</p>
+
 <p>DeepLIFT (Deep Learning Important FeaTures) is an efficient method for computing importance scores in a neural network. DeepLIFT was originally presented in <a href="https://arxiv.org/abs/1704.02685">&ldquo;Learning Important Features Through Propagating Activation Differences&rdquo;</a> by Shrikumar, Greenside, &amp; Kundaje. </p>
 
 <p>DeepLIFT is implemented in Python, and can be used to compute importance scores for models trained with any deep learning framework as long as the equivalent layers are implemented within DeepLIFT. If models are built with <a href="https://keras.io">Keras</a>, autoconversion functions are provided to make the building of the deeplift-equivalent model seamless. DeepLIFT uses Theano to perform the backend computations. An alpha version that is in tensorflow is available.</p>
